Добавил больше показателей

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,31 +1,47 @@
-<script src="/socket.io/socket.io.js"></script>
-<h1>Активное окно: <span id="app"></span></h1>
-<h1>Нажатий клавиатуры: <span id="keystrokes"></span></h1>
-<h1>Последние буквы: <span id="chars"></span></h1>
-<h1>Переключения окон: <span id="windowSwitches"></span></h1>
+<!-- Тупо, но  Сhrome скрывает контент - поэтому visibility стоит -->
+<html style="visibility: visible !important">
+  <body style="visibility: visible !important">
+    <script src="/socket.io/socket.io.js"></script>
+    <h3>Активное окно:</h3>
+    <p id="app"></p>
+    <h3>Нажатий клавиатуры:</h3>
+    <p id="keystrokes"></p>
+    <h3>Последние буквы:</h3>
+    <p id="chars" style="visibility: visible !important"></p>
+    <h3>Колличество кликов:</h3>
+    <p id="clicks"></p>
+    <h3>Переключений окон:</h3>
+    <p id="windowSwitches"></p>
 
-<script>
- var socket = io();
- var appWrapper = document.getElementById('app');
- var keystrokesWrapper = document.getElementById('keystrokes');
- var charsWrapper = document.getElementById('chars');
- var windowSwithesWrapper = document.getElementById('windowSwitches');
- var chars = '';
+      <script>
+       var socket = io();
+       var appWrapper = document.getElementById('app');
+       var keystrokesWrapper = document.getElementById('keystrokes');
+       var charsWrapper = document.getElementById('chars');
+       var windowSwithesWrapper = document.getElementById('windowSwitches');
+       var clicksWrapper = document.getElementById('clicks');
+       var chars = '';
 
- socket.on('changedApp', function(app) {
-   appWrapper.innerText = app;
- });
+       socket.on('changedApp', function(app) {
+         appWrapper.innerText = app;
+       });
 
- socket.on('changedKeystrokes', function(number) {
-   keystrokesWrapper.innerText = number;
- });
+       socket.on('changedKeystrokes', function(number) {
+         keystrokesWrapper.innerText = number;
+       });
 
- socket.on('lastChar', function(key) {
-   chars = (chars+key).slice(-60);
-   charsWrapper.innerText = chars;
- });
+       socket.on('lastChar', function(key) {
+         chars = (chars+key).slice(-60);
+         charsWrapper.innerText = chars;
+       });
 
- socket.on('shitchWindow', function(number) {
-   windowSwithesWrapper.innerText = number;
- });
-</script>
+       socket.on('shitchWindow', function(number) {
+         windowSwithesWrapper.innerText = number;
+       });
+
+       socket.on('clicksChange', function(number) {
+         clicksWrapper.innerText = number;
+       });
+      </script>
+  </body>
+</html>
